tests/baselines/reference/checkJsxChildrenCanBeTupleType.errors.txt
tests/cases/conformance/jsx/checkJsxChildrenCanBeTupleType.tsx(20,3): error TS2769: No overload matches this call.
  Overload 1 of 2, '(props: Readonly<ResizablePanelProps>): ResizablePanel', gave the following error.
    Type 'Element' is not assignable to type 'undefined'.
  Overload 2 of 2, '(props: ResizablePanelProps, context?: any): ResizablePanel', gave the following error.
    Type 'Element' is not assignable to type 'undefined'.


==== tests/cases/conformance/jsx/checkJsxChildrenCanBeTupleType.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from 'react'
    
    interface ResizablePanelProps {
      children: [React.ReactNode, React.ReactNode]
    }
    
    class ResizablePanel extends React.Component<
      ResizablePanelProps, any> {}
    
    const test = <ResizablePanel>
      <div />
      <div />
    </ResizablePanel>
    
    const testErr = <ResizablePanel>
      <div />
      <div />
      <div />
      ~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(props: Readonly<ResizablePanelProps>): ResizablePanel', gave the following error.
!!! error TS2769:     Type 'Element' is not assignable to type 'undefined'.
!!! error TS2769:   Overload 2 of 2, '(props: ResizablePanelProps, context?: any): ResizablePanel', gave the following error.
!!! error TS2769:     Type 'Element' is not assignable to type 'undefined'.
    </ResizablePanel>